adds wildcard dns record

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,39 @@ services:
     container_name: cloudflare-ddns-ipv4
     restart: unless-stopped
     network_mode: host
-    env_file:
-      - ./.env
     environment:
       - RRTYPE=A
+      - API_KEY=$API_KEY
+      - ZONE=$ZONE
+      - SUBDOMAIN=$SUBDOMAIN
   cloudflare-ddns-ipv6:
     image: oznu/cloudflare-ddns
     container_name: cloudflare-ddns-ipv6
     restart: unless-stopped
-    env_file:
-      - ./.env
     network_mode: host
     environment:
       - RRTYPE=AAAA
+      - API_KEY=$API_KEY
+      - ZONE=$ZONE
+      - SUBDOMAIN=$SUBDOMAIN
+
+  cloudflare-ddns-wildcard-ipv4:
+    image: oznu/cloudflare-ddns
+    container_name: cloudflare-ddns-wildcard-ipv4
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      - RRTYPE=A
+      - API_KEY=$API_KEY
+      - ZONE=$ZONE
+      - SUBDOMAIN=*.$SUBDOMAIN
+  cloudflare-ddns-wildcard-ipv6:
+    image: oznu/cloudflare-ddns
+    container_name: cloudflare-ddns-wildcard-ipv6
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      - RRTYPE=AAAA
+      - API_KEY=$API_KEY
+      - ZONE=$ZONE
+      - SUBDOMAIN=*.$SUBDOMAIN
